Fiexd the form-geocoder and the map component to use Tailwindcss and fixed some layout issues

--- a/code/src/ui/map/geocode/geocode-map-container.module.css
+++ b/code/src/ui/map/geocode/geocode-map-container.module.css
@@ -3,11 +3,13 @@
   z-index: 0;
   pointer-events: all;
 
-  width: 55vw;
+  width: 100%;
   height: 50vh;
-  margin: 0.5rem 0.75rem;
+  /* margin: 0.5rem 0.75rem; */
+
+  margin: 1rem 0;
+  border-radius: 8px;
 
   background-color: white;
-  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
-    rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+  box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
 }
